[Blog-4]Calcite edit

--- a/_posts/2020-08-18-calcite-2.md
+++ b/_posts/2020-08-18-calcite-2.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Calcite 介绍
+title: Calcite 组件和关键词介绍
 categories: Calcite
 description: Calcite 内组件介绍
 keywords: calcite, sql
 ---
 
-![calcite-stages-of-query-execution](../images/posts/calcite-stages-of-query-execution.png)
+![calcite-stages-of-query-execution](/images/posts/calcite-stages-of-query-execution.png)
 
 # COMPONENTS 
 
@@ -16,13 +16,21 @@ Defines metadata and namespaces that can be accessed in SQL queries
 
 ###Schema
 
+
+
 ###TABLE
+
+
 
 ###RelDataType
 
+
+
 ###Statistic
 
-![calcite-catalog](../images/posts/calcite-catalog.png)
+
+
+![calcite-catalog](/images/posts/calcite-catalog.png)
 
 ## **SQL parser** 
 
@@ -33,6 +41,8 @@ Input queries are parsed into an abstract syntax tree (AST)
 Tokens are represented in Calcite by SqlNode
 SqlNode can also be converted back to a SQL string via the unparse method
 
+
+
 ##JavaCC
 Java Compiler Compiler
 Created in 1996 at Sun Microsystems
@@ -40,7 +50,7 @@ Generates Java code from a domain- specific language
 ANTLR is the modern alternative used in projects like Hive and Drill
 JavaCC has sparse documentation
 
-![calcite-JavaCC](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/calcite-JavaCC.png)
+![calcite-JavaCC](/images/posts/calcite-JavaCC.png)
 
 ##SQLNode
 SqlNode represents an element in an abstract syntax tree
@@ -57,7 +67,7 @@ Validates abstract syntax trees against metadata provided by the catalog
  Converts AST into logical plans, optimizes logical plans, and converts logical expressions into physical plans
 
 ###Query Plan
-Query plans represent the steps necessary to execute a query![calcite-query-plan](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/calcite-query-plan.png)
+Query plans represent the steps necessary to execute a query![calcite-query-plan](/images/posts/calcite-query-plan.png)
 
 
 ###Query Optimization
@@ -72,7 +82,7 @@ Merge projections
 Convert subqueries to joins Reorder joins
 Push down projections Push down filters
 
-![calcite-query-opt](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/calcite-query-opt.png)
+![calcite-query-opt](/images/posts/calcite-query-opt.png)
 
 
 
@@ -163,11 +173,11 @@ Converter rules applied via convert
 
 ####Converter Rule
 
-![calcite-converter-rule](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/calcite-converter-rule.png)
+![calcite-converter-rule](/images/posts/calcite-converter-rule.png)
 
 ####Pattern Match
 
-![calcite-pattern-match](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/calcite-pattern-match.png)
+![calcite-pattern-match](/images/posts/calcite-pattern-match.png)
 
 
 ###Planners (RelOptPlanner)
@@ -199,7 +209,7 @@ Cost estimates are relative
 Statistics are used to improve accuracy of cost estimations
 Calcite provides utilities for computing various resource-related statistics for use in cost estimations
 
-![calcite-cbo](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/calcite-cbo.png)
+![calcite-cbo](/images/posts/calcite-cbo.png)
 
 ###Programs (Program)
 
