[Blog-4]Calcite edit

--- a/_posts/2020-08-18-calcite-2.md
+++ b/_posts/2020-08-18-calcite-2.md
@@ -55,7 +55,7 @@ JavaCC has sparse documentation
 ##SQLNode
 SqlNode represents an element in an abstract syntax tree
 
-![calcite-sqlnode](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/calcite-sqlnode.png)
+![calcite-sqlnode](/images/posts/calcite-sqlnode.png)
 
 
 ## **SQL validator** 
