--- a/_posts/2020-08-18-calcite-2.md
+++ b/_posts/2020-08-18-calcite-2.md
@@ -12,62 +12,51 @@ keywords: calcite, sql
 
 ## **Catalog** 
 
-Defines metadata and namespaces that can be accessed in SQL queries 
-
-###Schema
-
-
-
-###TABLE
-
-
-
-###RelDataType
-
-
-
-###Statistic
-
 
 
 ![calcite-catalog](/images/posts/calcite-catalog.png)
 
 ## **SQL parser** 
 
-Parses valid SQL queries into an abstract syntax tree (AST) 
+1.将有效的SQL查询解析为抽象语法树（AST）
 
-LL(k) parser written in JavaCC
-Input queries are parsed into an abstract syntax tree (AST)
-Tokens are represented in Calcite by SqlNode
-SqlNode can also be converted back to a SQL string via the unparse method
+2.用JavaCC编写的LL（k）解析器
 
+3.Input queries被解析为抽象语法树（AST）
 
+4.Tokens在Calcite中由SqlNode表示
+
+5.SqlNode也可以通过unparse方法转换回SQL字符串
 
 ##JavaCC
-Java Compiler Compiler
-Created in 1996 at Sun Microsystems
-Generates Java code from a domain- specific language
-ANTLR is the modern alternative used in projects like Hive and Drill
-JavaCC has sparse documentation
+
+1.Java编译器
+
+2.创建于1996年的Sun Microsystem
+
+3.从特定域的语言生成Java代码
+
+4.ANTLR是用于Hive和Drill等项目的替代品
 
 ![calcite-JavaCC](/images/posts/calcite-JavaCC.png)
 
 ##SQLNode
-SqlNode represents an element in an abstract syntax tree
+SqlNode 表示抽象语法树中的元素
 
 ![calcite-sqlnode](/images/posts/calcite-sqlnode.png)
 
-
 ## **SQL validator** 
 
-Validates abstract syntax trees against metadata provided by the catalog 
+根据Catalog提供的Metadata信息验证抽象语法树
 
 ## **Query optimizer** 
 
- Converts AST into logical plans, optimizes logical plans, and converts logical expressions into physical plans
+将AST转换为logical plans，优化 logical plans，并将 logical expressions 转换为 physical plans
 
 ###Query Plan
-Query plans represent the steps necessary to execute a query![calcite-query-plan](/images/posts/calcite-query-plan.png)
+Query plans represent the steps necessary to execute a query
+
+![calcite-query-plan](/images/posts/calcite-query-plan.png)
 
 
 ###Query Optimization
@@ -86,8 +75,6 @@ Push down projections Push down filters
 
 
 
-
-
 ## **SQL generator** 
 
  Converts physical plans to SQL 
@@ -98,48 +85,51 @@ Push down projections Push down filters
 
 ###Relational algebra (RelNode)
 
-RelNode represents a relational expression 
-Largely equivalent to Spark’s DataFrame methods
-Logical algebra 
-Physical algebra
+RelNode 表示 a relational expression 是处理 data的行为
 
-TableScan (FlinkTableScan)
-Project (FlinkProject)
-Filter (FlinkFilter)
-Aggregate (FlinkAggregate)
-Join (FlinkJoin)
-Union (FlinkUnion)
-Intersect (FlinkIntersect)
-Sort (FlinkSort)
+比如 Aggregate,Sort,Join,Project,Filter 等
 
- 
+RelNode 根据上游的Input数量,抽象出 3类，SingleRel,BiRel,SetOp
+
+| RelNode类型                      | 具体RelNode                     |
+| -------------------------------- | ------------------------------- |
+| SingleRel (input只有一个)        | Aggregate,Calc,Scan             |
+| BiRel （input 有2个 left,right） | Join                            |
+| SetOp (input有多个)              | Union, Minus(except) ,Intersect |
+
+#### Logical algebra 
+
+比如LogicalAggregate 
+
+#### Physical algebra
 
 ###Row expressions (RexNode)
 
-RexNode represents a row-level expression
-Largely equivalent to Spark’s Column
-Projection fields 
-Filter condition 
-Join condition 
-Sort fields
+RexNode 表示 row级别的 表达式 ,在 validate之后生成 所以有该row的type类型
 
+```
+ {@link RexLiteral} (constant value),
+* {@link RexVariable} (variable), {@link RexCall} (call to operator with
+* operands). Expressions are generally created using a {@link RexBuilder}
+* factory.</p>
+```
 
-Input column ref  (RexInputRef)
-Literal (RexLiteral)
-Struct field access (RexFieldAccess)
-Function call (RexCall)
-Window expression (RexOver)
+RexNode通过 RexBuilder Factory生成
+
+| RexInputRef    | Input column Reference                                       |
+| -------------- | ------------------------------------------------------------ |
+| RexLiteral     | 常量                                                         |
+| RexFieldAccess | <blockquote> * <pre>SELECT emp.empno FROM emp</pre> * </blockquote> |
+| RexCall        | Function call ,binary, unary, functions, special syntactic constructs * like CASE ... WHEN ... END |
+| RexVariable    | variable                                                     |
 
 ###Traits  (RelTrait)
 
-Defined by the RelTrait interface 
-Represent a trait of a relational expression
-that does not alter execution
-Traits are used to validate plan output 
-Three primary trait types:
-Convention
-RelCollation
-RelDistribution
+表示 RelNode的 Trait,并不会 改变执行,主要用于 验证 plan output,Flink Retract用到 此Trait
+3个重要的 trait types:
+Convention 
+RelCollation 排序 ASC DESC
+RelDistribution  hash,range,random,boardcast
 
 
 ###Conventions (Convention)
@@ -156,12 +146,34 @@ Conventions are used to represent a single data source
 
 Inputs to a relational expression must be in the same convention
 
+###METADATA
+
+|                        |      |      |
+| ---------------------- | ---- | ---- |
+| Selectivity            |      |      |
+| UniqueKeys             |      |      |
+| RowCount               |      |      |
+| DistinctRowCount       |      |      |
+| PercentageOriginalRows |      |      |
+| ColumnUniqueness       |      |      |
+| ColumnOrigin           |      |      |
+| Predicates             |      |      |
+| Collation              |      |      |
+| Distribution           |      |      |
+| Size                   |      |      |
+| Parallelism            |      |      |
+| Memory                 |      |      |
+| AllPredicates          |      |      |
+| ExpressionLineage      |      |      |
+| TableReferences        |      |      |
+
+
+
 ###Rules (RelOptRule)
 
-Rules are used to modify query plans 
-Defined by the RelOptRule interface
-Two types of rules: converters and transformers
-Rules
+Rules 用于修改 query plans 
+
+一共有2种类型:converters and transformers Rules
 
 Converter rules implement Converter and convert from one convention to another
 
