[Blog-5]add flink retract article

--- a/_posts/2020-08-18-calcite-2.md
+++ b/_posts/2020-08-18-calcite-2.md
@@ -10,13 +10,11 @@ keywords: calcite, sql
 
 # COMPONENTS 
 
-## **Catalog** 
-
-
-
+## Catalog
+包括 schema,Table,RelDataType,Statistic
 ![calcite-catalog](/images/posts/calcite-catalog.png)
 
-## **SQL parser** 
+## SQL parser
 
 1.将有效的SQL查询解析为抽象语法树（AST）
 
@@ -28,7 +26,7 @@ keywords: calcite, sql
 
 5.SqlNode也可以通过unparse方法转换回SQL字符串
 
-##JavaCC
+## JavaCC
 
 1.Java编译器
 
@@ -40,26 +38,26 @@ keywords: calcite, sql
 
 ![calcite-JavaCC](/images/posts/calcite-JavaCC.png)
 
-##SQLNode
+## SQLNode
 SqlNode 表示抽象语法树中的元素
 
 ![calcite-sqlnode](/images/posts/calcite-sqlnode.png)
 
-## **SQL validator** 
+## SQL validator
 
 根据Catalog提供的Metadata信息验证抽象语法树
 
-## **Query optimizer** 
+## Query optimizer 
 
 将AST转换为logical plans，优化 logical plans，并将 logical expressions 转换为 physical plans
 
-###Query Plan
+### Query Plan
 Query plans represent the steps necessary to execute a query
 
 ![calcite-query-plan](/images/posts/calcite-query-plan.png)
 
 
-###Query Optimization
+### Query Optimization
 
 Optimize logical plan
 Goal is typically to try to reduce the amount of data that must be processed early in the plan
@@ -83,7 +81,7 @@ Push down projections Push down filters
 
 ## 关键词 
 
-###Relational algebra (RelNode)
+### Relational algebra (RelNode)
 
 RelNode 表示 a relational expression 是处理 data的行为
 
@@ -103,7 +101,7 @@ RelNode 根据上游的Input数量,抽象出 3类，SingleRel,BiRel,SetOp
 
 #### Physical algebra
 
-###Row expressions (RexNode)
+### Row expressions (RexNode)
 
 RexNode 表示 row级别的 表达式 ,在 validate之后生成 所以有该row的type类型
 
@@ -119,11 +117,11 @@ RexNode通过 RexBuilder Factory生成
 | RexInputRef    | Input column Reference                                       |
 | -------------- | ------------------------------------------------------------ |
 | RexLiteral     | 常量                                                         |
-| RexFieldAccess | <blockquote> * <pre>SELECT emp.empno FROM emp</pre> * </blockquote> |
+| RexFieldAccess | SELECT emp.empno FROM emp  |
 | RexCall        | Function call ,binary, unary, functions, special syntactic constructs * like CASE ... WHEN ... END |
 | RexVariable    | variable                                                     |
 
-###Traits  (RelTrait)
+### Traits  (RelTrait)
 
 表示 RelNode的 Trait,并不会 改变执行,主要用于 验证 plan output,Flink Retract用到 此Trait
 3个重要的 trait types:
@@ -132,7 +130,7 @@ RelCollation 排序 ASC DESC
 RelDistribution  hash,range,random,boardcast
 
 
-###Conventions (Convention)
+#### Conventions (Convention)
 
 Convention is a type of RelTrait
 
@@ -146,7 +144,7 @@ Conventions are used to represent a single data source
 
 Inputs to a relational expression must be in the same convention
 
-###METADATA
+### METADATA
 
 |                        |      |      |
 | ---------------------- | ---- | ---- |
@@ -169,7 +167,7 @@ Inputs to a relational expression must be in the same convention
 
 
 
-###Rules (RelOptRule)
+### Rules (RelOptRule)
 
 Rules 用于修改 query plans 
 
@@ -183,16 +181,16 @@ onMatch is called for matched rules
 
 Converter rules applied via convert
 
-####Converter Rule
+#### Converter Rule
 
 ![calcite-converter-rule](/images/posts/calcite-converter-rule.png)
 
-####Pattern Match
+#### Pattern Match
 
 ![calcite-pattern-match](/images/posts/calcite-pattern-match.png)
 
 
-###Planners (RelOptPlanner)
+### Planners (RelOptPlanner)
 
 Planners implement the RelOptPlanner interface
 
@@ -200,14 +198,14 @@ Two types of planners:
 HepPlanner
 VolcanoPlanner
 
-####Heuristic Optimization
+#### Heuristic Optimization
 
 HepPlanner is a heuristic optimizer similar to Spark’s optimizer
 Applies all matching rules until none can be applied
 Heuristic optimization is faster than cost- based optimization
 Risk of infinite recursion if rules make opposing changes to the plan
 
-####Cost-based Optimization
+#### Cost-based Optimization
 VolcanoPlanner is a cost-based optimizer
 Applies matching rules iteratively, selecting the plan with the cheapest cost on each iteration
 Costs are provided by relational expressions 
@@ -223,6 +221,6 @@ Calcite provides utilities for computing various resource-related statistics for
 
 ![calcite-cbo](/images/posts/calcite-cbo.png)
 
-###Programs (Program)
+### Programs (Program)
 
 
