[Blog-7]add flink table and calc

--- a/_posts/2020-08-18-calcite-2.md
+++ b/_posts/2020-08-18-calcite-2.md
@@ -12,6 +12,11 @@ keywords: calcite, sql
 
 ## Catalog
 包括 schema,Table,RelDataType,Statistic
+
+TableStatistic  :rowCount行数,和ColumnStat
+
+ColumnStatistic : distinct values ndv,nullCount,avgLen,maxLen,maxValue,minValue
+
 ![calcite-catalog](/images/posts/calcite-catalog.png)
 
 ## SQL parser
@@ -128,6 +133,26 @@ RexNode通过 RexBuilder Factory生成
 Convention 
 RelCollation 排序 ASC DESC
 RelDistribution  hash,range,random,boardcast
+
+举例 FlinkRelDistributionTraitDef
+SINGLETON("single"),
+HASH_DISTRIBUTED("hash"),
+RANGE_DISTRIBUTED("range"),
+RANDOM_DISTRIBUTED("random"),
+ROUND_ROBIN_DISTRIBUTED("rr"),
+BROADCAST_DISTRIBUTED("broadcast"),
+ANY("any");
+
+比如在优化算子里面要满足是按key 进行hash Distribution
+
+```java
+private def isInputSatisfyRequiredDistribution(input: RelNode, keys: Array[Int]): Boolean = {
+    val requiredDistribution = createDistribution(keys)
+    val inputDistribution = input.getTraitSet.getTrait(FlinkRelDistributionTraitDef.INSTANCE)
+    inputDistribution.satisfies(requiredDistribution)
+  }
+
+```
 
 
 #### Conventions (Convention)
