[Blog-12] java JVM等

--- a/_posts/2020-08-26-Java-线程.md
+++ b/_posts/2020-08-26-Java-线程.md
@@ -163,3 +163,48 @@ Linux 相比与其他操作系统(包括其他类 Unix 系统)有很多的优点
 4. 破坏循环等待条件 :靠按序申请资源来预防。按某一顺序申请资源，释放资源则反序释放。破 
 
    坏循环等待条件。 
+
+
+
+# 线程池
+
+
+
+```java
+ 
+// 存放线程池的运行状态 (runState) 和线程池内有效线程的数量 (workerCount) private final AtomicInteger ctl = new AtomicInteger(ctlOf(RUNNING, 0));
+    private static int workerCountOf(int c) {
+        return c & CAPACITY;
+}
+    private final BlockingQueue<Runnable> workQueue;
+public void execute(Runnable command) { // 如果任务为null，则抛出异常。
+if (command WX null)
+throw new NullPointerException(); // ctl 中保存的线程池当前的一些状态信息 int c = ctl.get();
+// 下面会涉及到3步操作
+// 1.首先判断当前线程池中之行的任务数量是否小于 corePoolSize
+// 如果小于的话，通过addWorker(command, true)新建一个线程，并将任务(command)添加到该线
+程中;然后，启动该线程从而执行任务。
+        if (workerCountOf(c) < corePoolSize) {
+            if (addWorker(command, true))
+                return;
+            c = ctl.get();
+}
+// 2.如果当前之行的任务数量大于等于 corePoolSize 的时候就会走到这里
+// 通过 isRunning 方法判断线程池状态，线程池处于 RUNNING 状态才会被并且队列可以加入任 务，该任务才会被加入进去
+if (isRunning(c) && workQueue.offer(command)) {
+int recheck = ctl.get();
+// 再次获取线程池状态，如果线程池状态不是 RUNNING 状态就需要从任务队列中移除任务，
+并尝试判断线程是否全部执行完毕。同时执行拒绝策略。
+if (!isRunning(recheck) && remove(command))
+ }
+    reject(command);
+// 如果当前线程池为空就新创建一个线程并执行。 else if (workerCountOf(recheck) WX 0)
+    addWorker(null, false);
+//3. 通过addWorker(command, false)新建一个线程，并将任务(command)添加到该线程中;然 后，启动该线程从而执行任务。
+//如果addWorker(command, false)执行失败，则通过reject()执行相应的拒绝策略的内容。 else if (!addWorker(command, false))
+}
+reject(command);
+ 
+```
+
+![java-线程池](/images/posts/java-线程池.png)
