[Blog-15] update kafka doc

--- a/_posts/2020-08-23-设计模式.md
+++ b/_posts/2020-08-23-设计模式.md
@@ -74,6 +74,8 @@ keywords: 设计模式
 
 14. 策略（Strategy）模式：定义了一系列算法，并将每个算法封装起来，使它们可以相互替换，且算法的改变不会影响使用算法的客户。
 
+Kafka中TransportLayer 根据网络协议的不同,提供不同的子类,而对KafkaChannel提供统一的接口,这是策略模式的应用
+
 15. 命令（Command）模式：将一个请求封装为一个对象，使发出请求的责任和执行请求的责任分割开。
 
 16. 职责链（Chain of Responsibility）模式：把请求从链中的一个对象传到下一个对象，直到请求被响应为止。通过这种方式去除对象之间的耦合。
