[Blog-16] update 大小写和关键词

--- a/_posts/2020-08-30-Kafka-源码.md
+++ b/_posts/2020-08-30-Kafka-源码.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Kafka 源码
+title: Kafka Producer和Consumer
 categories: [kafka]
 description: Kafka源码
 keywords: kafka
@@ -10,9 +10,9 @@ keywords: kafka
 
 # Producer生产数据的流程
 
-![kafka-producer-arch](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/kafka-producer-arch.png)
+![kafka-producer-arch](/images/posts/kafka-producer-arch.png)
 
-![kafka-producer流程](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/kafka-producer流程.jpg)
+![kafka-producer流程](/images/posts/kafka-producer流程.jpg)
 
 Kafka -> ProducerInterceptors(拦截器)->Serializer->Partitioner(分区器)
 
