--- a/_posts/2020-09-20-分布式资源管理.md
+++ b/_posts/2020-09-20-分布式资源管理.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: 分布式资源管理
-categories: [cate1, cate2]
-description: some word here
-keywords: keyword1, keyword2
+categories: [分布式]
+description: 分布式
+keywords: 分布式
 ---
 
 
