--- a/_posts/2020-09-15-Spark.md
+++ b/_posts/2020-09-15-Spark.md
@@ -6,7 +6,8 @@ description: Spark基础
 keywords: Spark
 ---
 
-# Spark 作业执行过程 ![Internals-of-Job-Execution-In-Spark](/images/posts/Internals-of-Job-Execution-In-Spark.jpg)
+# Spark 作业执行过程 
+[Internals-of-Job-Execution-In-Spark](/images/posts/Internals-of-Job-Execution-In-Spark.jpg)
 
 # Spark的特性
 
