[Blog-30] add 项目经历整理

--- a/_posts/2020-10-26-项目经历整理.md
+++ b/_posts/2020-10-26-项目经历整理.md
@@ -6,4 +6,47 @@ description: 项目经历整理
 keywords: 项目经历
 ---
 
+# Flink特性整理
+
+## 常用算子实现
+
+
+
+## State实现
+
+
+
+# Flink vs Spark vs Jstorm
+
+
+
+
+
+# Pulsar和Kafka区别
+
+# 数据仓库
+
+## 实时数仓
+
+## 离线数仓
+
+
+
+# 规则引擎
+
+
+
+# Presto Http注册那块
+
+# 推荐系统的架构
+
+
+
+# RestFul服务设计
+
+
+
+# LeetCode刷一下基础的
+
+
 
