[Blog-31] add 实时数仓1

--- a/_posts/2020-10-26-项目经历整理.md
+++ b/_posts/2020-10-26-项目经历整理.md
@@ -134,7 +134,7 @@ Flink基于snapshot和checkpoint的故障恢复机制，在内部提供了exactl
 
 
 
-![应用分层](/Users/jessica/Desktop/应用分层.png)
+![应用分层](/images/posts/应用分层.png)
 
 - 开放接口层:可直接封装 Service 方法暴露成 RPC 接口;通过 Web 封装成 http 接口;进行 网关安全控制、流量控制等。 
 
